--- a/MixSync.ipynb
+++ b/MixSync.ipynb
@@ -39,22 +39,19 @@
         "drive.mount ('/gdrive')"
       ],
       "metadata": {
-        "id": "IhH68IrhWOxq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "91bcc2d8-3776-45ab-c104-10dfd6ab1c54"
+        "id": "IhH68IrhWOxq"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /gdrive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ke9QqWJWumrx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -119,7 +116,12 @@
         "\n",
         "  # Read the database based on db_name\n",
         "  db_name = 'westerndb.csv'\n",
-        "  database = pd.read_csv('/gdrive/My Drive/MixSync/westerndb.csv')\n",
+        "\n",
+        "  # @markdown Folder Location\n",
+        "  location = \"/gdrive/My Drive/MixSync\" # @param {type:\"string\"}\n",
+        "  location = location + \"/westerndb.csv\"\n",
+        "\n",
+        "  database = pd.read_csv(location)\n",
         "  columns_to_display = ['ARTIST', 'TITLE', 'KEY', 'BPM']\n",
         "  pd.set_option('display.max_rows', None)\n",
         "  pd.set_option('display.max_columns', None)\n",
@@ -128,7 +130,7 @@
         "  while True:\n",
         "      try:\n",
         "          # @markdown BPM: Beats per Minute\n",
-        "          bpm = 105 # @param {type:\"slider\", min:70, max:139, step:1}\n",
+        "          bpm = 70 # @param {type:\"slider\", min:70, max:139, step:1}\n",
         "          if bpm not in range(70, 140):\n",
         "              raise ValueError(\"BPM must be between 70 and 139.\")\n",
         "          break\n",
@@ -192,77 +194,21 @@
         },
         "cellView": "form",
         "id": "px-C7pdAhwkZ",
-        "outputId": "58ecea6b-23ed-425d-8b5a-cc6e27cd5aee"
+        "outputId": "1bc43dc3-d8da-4d22-f50c-1c8a2d22163d"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Finding songs that are ±5 BPM around 105 BPM...\n",
+            "Finding songs that are ±5 BPM around 70 BPM...\n",
             "Finding songs that are 0 keys apart from C...\n",
             "=============== SONGS ===============\n",
-            "                        ARTIST                        TITLE KEY     BPM\n",
-            "1664              David Guetta            This Ones For You   C  110.00\n",
-            "1676             Justin Bieber               Get Used To It   C  110.00\n",
-            "1677              Taylor Swift             King Of My Heart   C  110.00\n",
-            "1680              Taylor Swift                      The Man   C  110.00\n",
-            "1686                     Adele             Love In The Dark   C  110.00\n",
-            "1687                   Allie X                      Vintage   C  110.00\n",
-            "1689                      ZAYN                         BLUE   C  110.00\n",
-            "1693                The Weeknd                      Secrets   C  110.00\n",
-            "1706  Selena Gomez & The Scene               Bang Bang Bang   C  110.00\n",
-            "1729               Nicki Minaj                    Hell Yeah   C  109.00\n",
-            "1735                 Dua Lipa                   No Goodbyes   C  109.00\n",
-            "1761            Skylar Stecker                   How Did We   C  108.00\n",
-            "1764                The Weeknd           Can't Feel My Face   C  108.00\n",
-            "1765               Major Lazer          Light It Up (Remix)   C  108.00\n",
-            "1767                  Dua Lipa               Not My Problem   C  108.00\n",
-            "1768                      fun.                  Some Nights   C  108.00\n",
-            "1769           Imagine Dragons          Nothing Left To Say   C  108.00\n",
-            "1771                   Allie X             Girl Of The Year   C  108.00\n",
-            "1781            Britney Spears                     Criminal   C  108.00\n",
-            "1784              David Guetta                 Bang My Head   C  108.00\n",
-            "1793                   Zendaya             Love You Forever   C  107.00\n",
-            "1794             Rina Sawayama                 Love Me 4 Me   C  107.00\n",
-            "1819                   Allie X                    Sanctuary   C  106.00\n",
-            "1831              Taylor Swift           We Were Happy (TV)   C  106.00\n",
-            "1834                       BTS                           ON   C  106.00\n",
-            "1838                    MARINA                   Obsessions   C  105.00\n",
-            "1840                 Dua Lipa                        Dreams   C  105.00\n",
-            "1841              Harry Styles              To Be So Lonely   C  105.00\n",
-            "1848           Imagine Dragons                   West Coast   C  105.00\n",
-            "1872            Natalie LaRose                     Somebody   C  105.00\n",
-            "1876                Bruno Mars                    Moonshine   C  105.00\n",
-            "1879               Troye SIvan                    THE QUIET   C  104.00\n",
-            "1885              Taylor Swift       Soon You'll Get Better   C  104.00\n",
-            "1890                    AURORA  Murder Song (5, 4, 3, 2, 1)   C  104.00\n",
-            "1891             Fifth Harmony                     The Life   C  104.00\n",
-            "1911                  Flo Rida                      Whistle   C  104.00\n",
-            "1915         Mark Mothersbaugh           Rugrats Theme Song   C  103.05\n",
-            "1943            Ellie Goulding        Anything Could Happen   C  103.00\n",
-            "1951                   Finneas                    Die Alone   C  102.60\n",
-            "1954                 Sean Paul                       No Lie   C  102.00\n",
-            "1955                 Dua Lipa                        No Lie   C  102.00\n",
-            "1956              Clean Bandit                     Rockabye   C  102.00\n",
-            "1974              Taylor Swift              Cornelia Street   C  102.00\n",
-            "1987                   Tove Lo                    Cool Girl   C  102.00\n",
-            "1995           Imagine Dragons                  Working Man   C  101.00\n",
-            "2000             Ariana Grande                       Only 1   C  101.00\n",
-            "2003                  The 1975                Somebody Else   C  101.00\n",
-            "2008             Ariana Grande                Off The Table   C  101.00\n",
-            "2029                     BØRNS         Rolling In The Roses   C  100.00\n",
-            "2032                    Halsey                Good Mourning   C  100.00\n",
-            "2040               Major Lazer                     Sua Cara   C  100.00\n",
-            "2074                     Kygo                   It Ain't Me   C  100.00\n",
-            "2098           Imagine Dragons          On Top Of The World   C  100.00\n",
-            "2126                 Lady Gaga                  Bloody Mary   C  100.00\n",
-            "2127                  Maroon 5                         Cold   C  100.00\n",
-            "2137               Niall Horan                   Small Talk   C  100.00\n",
-            "2138              Taylor Swift               Stay Stay Stay   C  100.00\n",
-            "2139             Billie Eilish           listen before i go   C  100.00\n",
-            "2141                 Lady Gaga         So Happy I Could Die   C  100.00\n",
+            "             ARTIST                        TITLE KEY   BPM\n",
+            "3008        Zendaya                 Cry For Love   C  75.0\n",
+            "3016  Ariana Grande                Winter Things   C  75.0\n",
+            "3027         AURORA  Through the Eyes of a Child   C  66.0\n",
             "=====================================\n"
           ]
         }
@@ -332,7 +278,12 @@
         "\n",
         "  # Read the database based on db_name\n",
         "  db_name = 'keybpm.csv'\n",
-        "  database = pd.read_csv('/gdrive/My Drive/MixSync/keybpm.csv')\n",
+        "\n",
+        "  # @markdown Folder Location\n",
+        "  location = \"/gdrive/My Drive/MixSync\" # @param {type:\"string\"}\n",
+        "  location = location + \"/keybpm.csv\"\n",
+        "\n",
+        "  database = pd.read_csv(location)\n",
         "  columns_to_display = ['BPM', 'TITLE', 'KEY', 'YEAR']\n",
         "  pd.set_option('display.max_rows', None)\n",
         "  pd.set_option('display.max_columns', None)\n",
@@ -341,7 +292,7 @@
         "  while True:\n",
         "      try:\n",
         "          # @markdown BPM: Beats per Minute\n",
-        "          bpm = 74 # @param {type:\"slider\", min:70, max:139, step:1}\n",
+        "          bpm = 70 # @param {type:\"slider\", min:70, max:139, step:1}\n",
         "          if bpm not in range(70, 140):\n",
         "              raise ValueError(\"BPM must be between 70 and 139.\")\n",
         "          break\n",
@@ -405,22 +356,20 @@
         },
         "cellView": "form",
         "id": "m1k6DKK0sMw2",
-        "outputId": "0348bb5b-93b4-4dd3-e108-f12f52462d89"
+        "outputId": "0edf6b3d-97d2-488d-fb85-99d0f7dda60d"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Finding songs that are ±3 BPM around 74 BPM...\n",
+            "Finding songs that are ±3 BPM around 70 BPM...\n",
             "Finding songs that are 0 keys apart from C Major...\n",
             "=============== SONGS ===============\n",
-            "     BPM               TITLE      KEY  YEAR\n",
-            "22  71.5             Ryuusei  C Major  2018\n",
-            "41  74.0      Isekai Quartet  C Major  2019\n",
-            "48  75.0         Bravely You  C Major  2015\n",
-            "55  75.5  B Chiku Sentai SOX  C Major  2015\n",
+            "     BPM            TITLE      KEY  YEAR\n",
+            "5   70.0  Itsuka Sekai ga  C Major  2018\n",
+            "22  71.5          Ryuusei  C Major  2018\n",
             "=====================================\n"
           ]
         }
