--- a/MixSync.ipynb
+++ b/MixSync.ipynb
@@ -39,22 +39,10 @@
         "drive.mount ('/gdrive')"
       ],
       "metadata": {
-        "id": "IhH68IrhWOxq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "59386365-13f9-4c50-d7a1-fe95627996f2"
+        "id": "IhH68IrhWOxq"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /gdrive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -263,67 +251,11 @@
         "      print(\"No search performed.\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "iFkXcmn0CZfn",
-        "outputId": "1c6b4100-499d-48cf-b26f-a15cf7bd2abd"
+        "id": "iFkXcmn0CZfn"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "=============== WELCOME TO MIXSYNC ===============\n",
-            "With this application, you can accurately find and sort songs by key and BPM,\n",
-            "  curated with meticulous verification, and filter them by various attributes for a\n",
-            "  seamless music-matching experience.\n",
-            "=============== SONGS ===============\n",
-            "            ARTIST         TITLE KEY   BPM\n",
-            "2284  Taylor Swift  Shake It Off   G  80.0\n",
-            "=====================================\n",
-            "Searching songs that would match 'Shake It Off' by 'Taylor Swift'... \n",
-            "Finding songs that are ±5 BPM around 80 BPM...\n",
-            "Finding songs that are 0 keys apart from G...\n",
-            "=============== SONGS ===============\n",
-            "                   ARTIST                          TITLE KEY   BPM\n",
-            "6            Taylor Swift               ...Ready For It?   G  80.0\n",
-            "682       Imagine Dragons                        Digital   G  83.5\n",
-            "3053                 ZAYN                          tRuTh   G  85.0\n",
-            "430               Rihanna            California King Bed   G  85.0\n",
-            "1425         Shawn Mendes                    Kid In Love   G  85.0\n",
-            "3041        Billie Eilish         idontwannabeyouanymore   G  85.0\n",
-            "199          Taylor Swift                      Bad Blood   G  85.0\n",
-            "1399            Lady Gaga                         Joanne   G  75.0\n",
-            "2883  My Chemical Romance    Welcome to the Black Parade   G  75.0\n",
-            "908                  Lauv                        For Now   G  84.0\n",
-            "2948         Taylor Swift                         Willow   G  84.0\n",
-            "2306         Taylor Swift              Should've Said No   G  84.0\n",
-            "811                 PVRIS                        Eyelids   G  76.0\n",
-            "637         Ariana Grande                    Daydreamin'   G  76.0\n",
-            "1413                 P!nk                 Just Like Fire   G  81.5\n",
-            "2952                Birdy                          Wings   G  83.0\n",
-            "161        Ellie Goulding                       Around U   G  83.0\n",
-            "2493              Allie X             Super Sunset Intro   G  82.0\n",
-            "1959                BØRNS            Overnight Sensation   G  82.0\n",
-            "3034                 ZAYN                   fOoL fOr YoU   G  78.0\n",
-            "114           The Weeknd                     Alone Again   G  81.0\n",
-            "1784        Avril Lavigne                          Naked   G  81.0\n",
-            "1308            DJ Khaled                    I'm The One   G  81.0\n",
-            "2807           Katy Perry                      Ur So Gay   G  79.0\n",
-            "382        Britney Spears         Brightest Morning Star   G  80.0\n",
-            "2284         Taylor Swift                   Shake It Off   G  80.0\n",
-            "1184         Lana Del Rey  Hope is a dangerous thing ...   G  80.0\n",
-            "618              Big Sean                    Dance (A$$)   G  80.0\n",
-            "1894         Lana Del Rey               Off To The Races   G  80.0\n",
-            "2781                  BTS                           UGH!   G  83.0\n",
-            "2522                ATEEZ                         THANXX   G  82.5\n",
-            "=====================================\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -623,90 +555,12 @@
         "  print(f\"{div}======={div}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "1mUXAx8U9gZN",
-        "outputId": "b7be6bfa-b108-4a08-9f0e-3ca806c54d5c"
+        "cellView": "form",
+        "id": "1mUXAx8U9gZN"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "=============== WELCOME TO MIXSYNC ===============\n",
-            "With this application, you can accurately find and sort songs by key and BPM,\n",
-            "  curated with meticulous verification, and filter them by various attributes for a\n",
-            "  seamless music-matching experience.\n",
-            "Finding songs that are ±5 BPM around 105 BPM...\n",
-            "Finding songs that are 0 keys apart from C...\n",
-            "=============== SONGS ===============\n",
-            "                        ARTIST                          TITLE KEY     BPM\n",
-            "2375            Natalie LaRose                       Somebody   C  105.00\n",
-            "588             Britney Spears                       Criminal   C  108.00\n",
-            "2979           Imagine Dragons                    Working Man   C  101.00\n",
-            "1893             Ariana Grande                  Off The Table   C  101.00\n",
-            "1931             Ariana Grande                         Only 1   C  101.00\n",
-            "2376                  The 1975                  Somebody Else   C  101.00\n",
-            "1842                 Dua Lipa                     No Goodbyes   C  109.00\n",
-            "1118               Nicki Minaj                      Hell Yeah   C  109.00\n",
-            "2472               Major Lazer                       Sua Cara   C  100.00\n",
-            "314                  Lady Gaga                    Bloody Mary   C  100.00\n",
-            "2350               Niall Horan                     Small Talk   C  100.00\n",
-            "2361                 Lady Gaga           So Happy I Could Die   C  100.00\n",
-            "2435              Taylor Swift                 Stay Stay Stay   C  100.00\n",
-            "217               David Guetta                   Bang My Head   C  108.00\n",
-            "1376                     Kygo                     It Ain't Me   C  100.00\n",
-            "3047             Billie Eilish             listen before i go   C  100.00\n",
-            "533                   Maroon 5                           Cold   C  100.00\n",
-            "1907           Imagine Dragons            On Top Of The World   C  100.00\n",
-            "2165                     BØRNS           Rolling In The Roses   C  100.00\n",
-            "2824                   Allie X                        Vintage   C  110.00\n",
-            "1431              Taylor Swift               King Of My Heart   C  110.00\n",
-            "2260                The Weeknd                        Secrets   C  110.00\n",
-            "2692              David Guetta              This Ones For You   C  110.00\n",
-            "180                       ZAYN                           BLUE   C  110.00\n",
-            "2625              Taylor Swift                        The Man   C  110.00\n",
-            "966              Justin Bieber                 Get Used To It   C  110.00\n",
-            "1589                     Adele               Love In The Dark   C  110.00\n",
-            "1026                    Halsey                  Good Mourning   C  100.00\n",
-            "215   Selena Gomez & The Scene                 Bang Bang Bang   C  110.00\n",
-            "2374                      fun.                    Some Nights   C  108.00\n",
-            "1863                  Dua Lipa                 Not My Problem   C  108.00\n",
-            "1727                Bruno Mars                      Moonshine   C  105.00\n",
-            "740                  Dua Lipa                          Dreams   C  105.00\n",
-            "1887                    MARINA                     Obsessions   C  105.00\n",
-            "2720              Harry Styles                To Be So Lonely   C  105.00\n",
-            "2884           Imagine Dragons                     West Coast   C  105.00\n",
-            "2923                  Flo Rida                        Whistle   C  104.00\n",
-            "2618             Fifth Harmony                       The Life   C  104.00\n",
-            "2523               Troye SIvan                      THE QUIET   C  104.00\n",
-            "2390              Taylor Swift         Soon You'll Get Better   C  104.00\n",
-            "1748                    AURORA    Murder Song (5, 4, 3, 2, 1)   C  104.00\n",
-            "2222                   Allie X                      Sanctuary   C  106.00\n",
-            "1885                       BTS                             ON   C  106.00\n",
-            "1513               Major Lazer            Light It Up (Remix)   C  108.00\n",
-            "2877              Taylor Swift  We Were Happy (Taylor's Ve...   C  106.00\n",
-            "676                    Finneas                      Die Alone   C  103.00\n",
-            "1595             Rina Sawayama                   Love Me 4 Me   C  107.00\n",
-            "1614                   Zendaya               Love You Forever   C  107.00\n",
-            "2159              Clean Bandit                       Rockabye   C  102.00\n",
-            "1845                 Sean Paul                         No Lie   C  102.00\n",
-            "1844                 Dua Lipa                          No Lie   C  102.00\n",
-            "567                    Tove Lo                      Cool Girl   C  102.00\n",
-            "571               Taylor Swift                Cornelia Street   C  102.00\n",
-            "1200            Skylar Stecker                     How Did We   C  108.00\n",
-            "441                 The Weeknd             Can't Feel My Face   C  108.00\n",
-            "982                    Allie X               Girl Of The Year   C  108.00\n",
-            "1873           Imagine Dragons            Nothing Left To Say   C  108.00\n",
-            "147             Ellie Goulding          Anything Could Happen   C  103.00\n",
-            "2182         Mark Mothersbaugh             Rugrats Theme Song   C  103.05\n",
-            "=====================================\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -928,35 +782,11 @@
         "          updated_df.to_csv(location, index=False)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ig0pMDtpS5AW",
-        "outputId": "25091387-f5fb-4600-ac6b-c0fb7b269e5d"
+        "cellView": "form",
+        "id": "ig0pMDtpS5AW"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=============== WELCOME TO MIXSYNC ===============\n",
-            "With this application, you can accurately find and sort songs by key and BPM,\n",
-            "  curated with meticulous verification, and filter them by various attributes for a\n",
-            "  seamless music-matching experience.\n",
-            "SEARCH FIELDS: ['ARTIST' 'CONTRIBUTING ARTIST' 'TITLE' 'KEY' 'BPM' 'TYPE' 'YEAR']\n",
-            "{'ARTIST': 'Sabrina Carpenter', 'CONTRIBUTING ARTIST': '', 'TITLE': 'Espresso', 'KEY': 'C', 'BPM': 105, 'TYPE': 'Western', 'YEAR': 2024}\n",
-            "[1] ARTIST: Sabrina Carpenter\n",
-            "[2] CONTRIBUTING ARTIST: \n",
-            "[3] TITLE: Espresso\n",
-            "[4] KEY: C\n",
-            "[5] BPM: 105\n",
-            "[6] TYPE: Western\n",
-            "[7] YEAR: 2024\n",
-            "Is this correct [Y/N]: y\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
